fix hover text alignment

--- a/src/components/PreviewCard.scss
+++ b/src/components/PreviewCard.scss
@@ -22,13 +22,13 @@
       align-items: flex-end;
       justify-content: flex-end;
       text-align: right;
-      width: calc(#{$image-width-small} - 1vw);
-
+      padding: 10px;
+      width: calc(#{$image-width-small} - 20px);
+      margin-top: 10px;
+      margin-bottom: 10px;
       position: absolute;
       top: 0;
       bottom: 0;
-      right: 0;
-      left: 0;
       background: $blue-pale-transparent;
       color: #fff;
       visibility: hidden;
